page 1 half done

--- a/main.html
+++ b/main.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta carset=utf-8>
+        <meta charset=utf-8>
         <link href ='./style.css' type='text/css' rel='stylesheet'>
         <title>css task</title>
     </head>
     <body>
-        <div class='background-right'>
-            <h1 class='Headline-H1'> I Create Website Design,</br> that Makes Sense.</h1>
-        </div>
         <div class='background-left'>
-            
+            <div class='author'>
+                <img class='author-photo' src='./lr2/photo/author.jpg'>
+                <h3 class='author-name'>Matthew Schwartz</h3>
+                </br>
+                <h3 class='blog'>— Blog</h3>
+            </div>
         </div>
-        
+
+        <div class='background-right'>
+            <h1 class='Headline-H1'> I Create Website Design, that Makes Sense.</h1>
+            <h2 class='Sub-title'> When a Web Design Template Makes Sense. In general, you may want
+                to select a pre-configured web design template, when you're in the
+                following situations...</h2>
+            <img class='arrow-down' src='./lr2/icons/arrow-down.svg'>
+            <div class='example'>чиста пралистнуть))</div>
+        </div>
     </body>
 </html>
