--- a/main.html
+++ b/main.html
@@ -76,14 +76,21 @@
             would certainly come round with the doctor from the medical insurance company, accuse his parents of having a lazy son,
             and accept the doctor's recommendation not to make any claim as the doctor believed that no-one was ever ill but that
             many were workshy.</p>
-            <div class="bottom">
-                <div class="info">
-                    <img class="author-photo-second clearfix" src="./lr2/photo/author.jpg">
-                    <p class="author-name-second">Matthew Schwartz</p>
-                    <p class="bio">And what's more, would he have been entirely wrong in this case? Gregor did in fact, apart from
-                        excessive sleepiness
-                        after sleeping for so long, feel completely well and even felt much hungrier than usual.</p>
+            <div class="bottom clearfix">
+                <div class="info clearfix">
+                    <div class='info-photo'>
+                        <img class="author-photo-second clearfix" src="./lr2/photo/author.jpg">
+                    </div>
+                    <div class='info-text'>
+                        <p class="author-name-second">Matthew Schwartz</p>
+                        <p class="bio">And what's more, would he have been entirely wrong in this case? Gregor did in fact, apart from
+                            excessive sleepiness
+                            after sleeping for so long, feel completely well and even felt much hungrier than usual.</p>
+                        <input type='text'>
+                        <input type='submit'>
+                    </div>
                 </div>
+                <!-- <form class='subscribe-form'></form> -->
             </div>
         </div>
     </body>
