--- a/main.html
+++ b/main.html
@@ -77,11 +77,11 @@
             and accept the doctor's recommendation not to make any claim as the doctor believed that no-one was ever ill but that
             many were workshy.</p>
             <div class="bottom clearfix">
-                <div class="info clearfix">
-                    <div class='info-photo'>
+                <div class="info">
+                    <div class='info info-photo'>
                         <img class="author-photo-second clearfix" src="./lr2/photo/author.jpg">
                     </div>
-                    <div class='info-text'>
+                    <div class='info info-text'>
                         <p class="author-name-second">Matthew Schwartz</p>
                         <p class="bio">And what's more, would he have been entirely wrong in this case? Gregor did in fact, apart from
                             excessive sleepiness
