--- a/main.html
+++ b/main.html
@@ -56,13 +56,13 @@
             sitting there eating their breakfasts. I ought to just try that with my boss; I'd get kicked out on the spot. But who
             knows, maybe that would be the best thing for me. If I didn't have my parents to think about I'd have given in my notice
             a long time ago, <b>I'd have gone up to the boss and told him just what I think, tell him everything I would, let him know
-            just what I feel.</b> He'd fall right off his desk! And it's a funny sort of business to be sitting up there at your desk,
+            just what I feel.</b> <a class='hyperlink' href='./main.html#bottom'>He'd fall right off his desk!</a> And it's a funny sort of business to be sitting up there at your desk,
             talking down at your subordinates from up there, especially when you have to go right up close because the boss is hard
             of hearing.</p>
             <h3 class='Headline-H4'>Well, there's still some hope;</h3>
             <p class='text'>once I've got the money together to pay off my parents' debt to him - another five or six
             years I suppose - that's definitely what I'll do. That's when I'll make the big change. First of all though, I've got to get up, my train leaves at five."</p>
-            <p class='text quote'>And he looked over at the alarm clock, ticking on the chest of drawers. "God in Heaven! " he thought. It was half past
+            <p class='text quote'>And he looked over at the alarm clock, ticking on the chest of drawers. "God in Heaven!", he thought. It was half past
             six and the hands were quietly moving forwards, it was even later than half past, more like quarter to seven.</p>
             <p class="text">Had the alarm clock not rung? He could see from the bed that it had been set for four o'clock as it should have been; it
             certainly must have rung. Yes, but was it possible to quietly sleep through that furniture-rattling noise? True, he had not slept peacefully, but
@@ -76,7 +76,10 @@
             would certainly come round with the doctor from the medical insurance company, accuse his parents of having a lazy son,
             and accept the doctor's recommendation not to make any claim as the doctor believed that no-one was ever ill but that
             many were workshy.</p>
-            <div class="bottom clearfix">
+            <div class="bottom clearfix" id='bottom'>
+                <div class="share">
+
+                </div>
                 <div class="info">
                     <div class='info info-photo'>
                         <img class="author-photo-second clearfix" src="./lr2/photo/author.jpg">
@@ -86,8 +89,11 @@
                         <p class="bio">And what's more, would he have been entirely wrong in this case? Gregor did in fact, apart from
                             excessive sleepiness
                             after sleeping for so long, feel completely well and even felt much hungrier than usual.</p>
-                        <input type='text'>
-                        <input type='submit'>
+                        <form class='subscribe-form'>   
+                            <input type='text' class="input-field" placeholder="Subscribe now!">
+                            <input type='submit' class="subscribe-button" value='Subscribe'>
+                        </form>
+
                     </div>
                 </div>
                 <!-- <form class='subscribe-form'></form> -->
