--- a/main.html
+++ b/main.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset=utf-8>
         <link href ='./style.css' type='text/css' rel='stylesheet'>
+        <link href='./lr2/fonts/geomanist-regular.woff2' as='font'>
+
         <title>css task</title>
     </head>
     <body>
