--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
     <head>
         <meta charset=utf-8>
         <link href ='./style.css' type='text/css' rel='stylesheet'>
-        <link href='./lr2/fonts/geomanist-regular.woff2' as='font'>
+        <link href='./fonts/geomanist-regular.woff2' as='font'>
 
         <title>css task</title>
     </head>
     <body>
         <div class='background-left '>
             <div class='author clearfix'>
-                <img class='author-photo' src='./lr2/photo/author.jpg'>
+                <img class='author-photo' src='./photo/author.jpg'>
                 <h3 class='author-name'>Matthew Schwartz</h3>
                 </br>
                 <h3 class='blog'>— Blog</h3>
             </div>
             <div class='icons'>
-                <img class='logo' src='.\LR2\icons\icon-facebook.svg'>
-                <img class='logo' src='.\LR2\icons\icon-instagram.svg'>
-                <img class='logo' src='.\LR2\icons\icon-linkedin.svg'>
+                <img class='logo' src='.\icons\icon-facebook.svg'>
+                <img class='logo' src='.\icons\icon-instagram.svg'>
+                <img class='logo' src='.\icons\icon-linkedin.svg'>
             </div>
             <div class='goto-website'>
-                <a href='./main.html'><img class='arrow-left' src='.\LR2\icons\arrow-left.svg'></a>
+                <a href='./index.html'><img class='arrow-left' src='.\icons\arrow-left.svg'></a>
                 <p class='website-text'>Go to my website</p>
             </div>
         </div>
@@ -31,8 +31,8 @@
             <h2 class='Sub-title'> When a Web Design Template Makes Sense. In general, you may want
                 to select a pre-configured web design template, when you're in the
                 following situations...</h2>
-            <a href='./main.html#page2'>
-                <img class='arrow-down' src='./lr2/icons/arrow-down.svg'>
+            <a href='./index.html#page2'>
+                <img class='arrow-down' src='./icons/arrow-down.svg'>
             </a>
             <!-- NEXT PAGE -->
             <h2 class='Headline-H2' id='page2'>One morning, when Gregor Samsa woke from troubled dreams...</h2>
@@ -42,7 +42,7 @@
                 moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.
                 "What's happened to me? " he thought. It wasn't a dream. His room, a proper human room although a little too small, lay
                 peacefully between its four familiar walls.</p>
-            <img class='Sherwood-Forest-Lake' src='./lr2/photo/mountain-lake.png'>
+            <img class='Sherwood-Forest-Lake' src='./photo/mountain-lake.png'>
             <p class='text'>A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung
                 a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady
                 fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm
@@ -56,7 +56,7 @@
                 home, and on top of that there's the curse of travelling, worries about making train connections, bad and irregular
                 food, contact with different people all the time so that you can never get to know anyone or become friendly with them.
                 It can all go to Hell!</p>
-            <img class='lake' src='./lr2/photo/lake.png'>
+            <img class='lake' src='./photo/lake.png'>
             <p class='lake-description'>Lake is an area filled with water</p>
             <hr class='grey-line'>
             <p class='text'>He felt a slight itch up on his belly; pushed himself slowly up on his back towards the headboard so that he could lift
@@ -69,7 +69,7 @@
             sitting there eating their breakfasts. I ought to just try that with my boss; I'd get kicked out on the spot. But who
             knows, maybe that would be the best thing for me. If I didn't have my parents to think about I'd have given in my notice
             a long time ago, <b>I'd have gone up to the boss and told him just what I think, tell him everything I would, let him know
-            just what I feel.</b> <a class='hyperlink' href='./main.html#bottom'>He'd fall right off his desk!</a> And it's a funny sort of business to be sitting up there at your desk,
+            just what I feel.</b> <a class='hyperlink' href='./index.html#bottom'>He'd fall right off his desk!</a> And it's a funny sort of business to be sitting up there at your desk,
             talking down at your subordinates from up there, especially when you have to go right up close because the boss is hard
             of hearing.</p>
             <h3 class='Headline-H4'>Well, there's still some hope;</h3>
@@ -83,7 +83,7 @@
             <p class="text">What should he do now? The next train went at seven; if he were to catch that he would have to rush like mad and the
             collection of samples was still not packed, and he did not at all feel particularly fresh and lively.And even if he did catch the train he would not avoid his boss's anger as the office assistant would have been there to
             see the five o'clock train go, he would have put in his report about Gregor's not being there a long time ago.</p>
-            <img class='forest' src='./lr2/photo/forest.png'>
+            <img class='forest' src='./photo/forest.png'>
             <p class="text clearfix">The office assistant was the boss's man, spineless, and with no understanding. What about if he reported sick? But that
             would be extremely strained and suspicious as in fifteen years of service Gregor had never once yet been ill. His boss
             would certainly come round with the doctor from the medical insurance company, accuse his parents of having a lazy son,
@@ -95,7 +95,7 @@
                 </div>
                 <div class="info">
                     <div class='info info-photo'>
-                        <img class="author-photo-second clearfix" src="./lr2/photo/author.jpg">
+                        <img class="author-photo-second clearfix" src="./photo/author.jpg">
                     </div>
                     <div class='info info-text'>
                         <p class="author-name-second">Matthew Schwartz</p>
