--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <h3 class='blog'>— Blog</h3>
             </div>
             <div class='icons'>
-                <img class='logo' src='.\icons\icon-facebook.svg'>
-                <img class='logo' src='.\icons\icon-instagram.svg'>
-                <img class='logo' src='.\icons\icon-linkedin.svg'>
+                <img class='logo' src='./icons/icon-facebook.svg'>
+                <img class='logo' src='./icons/icon-instagram.svg'>
+                <img class='logo' src='./icons/icon-linkedIn.svg'>
             </div>
             <div class='goto-website'>
-                <a href='./index.html'><img class='arrow-left' src='.\icons\arrow-left.svg'></a>
+                <a href='./index.html'><img class='arrow-left' src='./icons/arrow-left.svg'></a>
                 <p class='website-text'>Go to my website</p>
             </div>
         </div>
